--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GithubUser</string>
+    <string name="img">image</string>
+    <string name="username">Sample username</string>
+    <string name="search_user">Search..</string>
 </resources>
