--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="foll">0 Follower 1 Following</string>
     <string name="public_repos">Public Repos</string>
     <string name="language">java</string>
+    <string name="notification_permission_title">Notification Permission</string>
+    <string name="notification_permission_message">This app requires notification permission to function properly. Please grant the permission in the next screen.</string>
+    <string name="notification_permission_positive_button">Open Settings</string>
+    <string name="notification_permission_negative_button">Cancel</string>
 </resources>
